correccion de observaciones en revision
